# dbcollection

./: .coveragerc  .editorconfig  .gitignore  .gitmodules  .travis.yml  DOCUMENTATION.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  TODO.md  appveyor.yml  bitbucket-pipelines.yml  circle.yml  codecov.yml  download.py  download_cifar10.py  install.ps1  readthedocs.yml  requirements.txt  roadmap.md  run_test.sh  setup.cfg  setup.py  tmp.txt  tox.ini
.circleci/: config.yml
APIs/Lua/: class.lua  env.lua  init.lua  test.lua
APIs/lua/: CMakeLists.txt  DOCUMENTATION.md  README.md  dbcollection-scm-1.rockspec  env.lua  init.lua  loader.lua  manager.lua
APIs/matlab/: DOCUMENTATION.md  README.md  dbcollection.m  dbcollection_DatasetLoader.m  dbcollection_utils.m  dbcollection_utils_pad.m  dbcollection_utils_string_ascii.m
APIs/python/: __init__.py  (+2 more)
ci/: conda_upload.sh  requirements.txt  requirements_pip.txt  travis_install.sh
conda-recipe/: deploy.py  meta.yaml
dataset/: __init__.py  data.py  env.py  storage.py  utils.py
datasets/: __init__.py  utils.py
dbcollection/: __init__.py  balance.py  cache.py  data.py  db_loader_postprocess.py  filter.py  loader.py  manager.py  organize_list.py  postprocess.py  select.py  select_filter.py  storage.py  utils.py  version.py
docs/: Makefile  make.bat  tutorial_dbcollection_api.ipynb
notebooks/: tutorial_dbcollection_api.ipynb
test/: README.md  test.py
tests/: test_funs.py  test_loader.py
tmp/: dl_bar.py  download.py  splittable.lua  splittablev2.lua  teste.lua  tmp_teste.py
(+489 files in other folders)
