[bdist_wheel]
universal=1

[metadata]
description-file = README.md

[flake8]
max-line-length = 100
ignore = E305,E402,E721,F401,F403,F405,F821,F841,F999
exclude =
    .tox,
    .git,
    .vscode,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    dbcollection/tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs
    notebooks,
    ci,
    conda-recipe