[bdist_wheel]
universal=1

[metadata]
description-file = README.md

[flake8]
max-line-length = 120
ignore = E305,E402,E721,F401,F403,F405,F821,F841,F999
exclude =
    .tox,
    .git,
    .vscode,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/*,
    test_filenames.py,
    train_filenames.py,
    val_filenames.py,
    trainval_filenames.py,
    train_image_ids.py,
    val_image_ids.py,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs
    notebooks,
    ci,
    conda-recipe
